--- a/public/front-assets/css/custom.css
+++ b/public/front-assets/css/custom.css
@@ -21,3 +21,18 @@
     border-radius: 50%;
     padding: 0px 5px;
 }
+.section-3 .cat-card {
+    border-radius: 11px;
+}
+.section-3 .cat-card .left img {
+    border-radius: 11px 0px 0px 11px;
+}
+.section-3 .cat-card .right:hover {
+    border-radius: 0px 11px 11px 0px;
+}
+.section-4 .product-card {
+    border-radius: 11px;
+}
+.product-image img {
+    border-radius: 11px 11px 0px 0px;
+}
